retesting the app

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ProjetSyntheseInterface</name>
+	<name>L2S4_Scheduler-JavaFX</name>
 	<comment></comment>
 	<projects>
 	</projects>
